# molecularRotationalGrids

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  Snakefile  Snakefile_rate_test  all_experiments.csv  config.yaml  eigenval_H2O_H2O_0585.npy  eigenval_H2O_H2O_0630.npy  eigenval_H2O_H2O_0634.npy  eigenvec_H2O_H2O_0585.npy  eigenvec_H2O_H2O_0630.npy  experiments.csv  mdout.mdp  mylog  o.npy  pseudotrajectory.xtc  pyproject.toml  requirements.txt  requirements2.txt  setup.cfg  state_prev.cpt  structure.gro  temp.csv
.github/workflows/: coverage.yml  poetry-app.yml  python-app.yml  readthedocs-app.yml
.snakemake/metadata/: aWNvXzQubnB5  aWNvXzUubnB5  bW9sZ3JpL291dHB1dC9ncmlkX2ZpbGVzL2ljb182Lm5weQ==  bW9sZ3JpL291dHB1dC9ncmlkX2ZpbGVzL2ljb182LnR4dA==  bW9sZ3JpL291dHB1dC9ncmlkX2ZpbGVzL2ljb184Lm5weQ==
.virtual_documents/notebooks/: sqra_reduction.ipynb
docs/: Makefile  api.rst  conf.py  index.rst  molecules.rst
docs/_autosummary/: molgri.rst
docs/molgri/: analysis.html  bodies.html  constants.html  grids.html  index.html  parsers.html  paths.html  plotting.html  pts.html  rotations.html  utils.html  wrappers.html  writers.html
input/: H2O.gro  H2O_H2O.top  H2O_H2Op.top  default_configuration_file.yaml  mdrun.mdp  nvt_fake_ar.gro  topol_fake_ar.top
jupyter/: Adjacency.ipynb  FullGrid assignment and transition matrices.ipynb  HF_HF_Versuch.ipynb  Meeting_2024_02_14.ipynb  Meeting_2024_April.ipynb  Untitled.ipynb  learning_deeptime.ipynb
jupyter/data/: pentapeptide-00-500ns-impl-solv.xtc  pentapeptide-01-500ns-impl-solv.xtc  pentapeptide-02-500ns-impl-solv.xtc  pentapeptide-03-500ns-impl-solv.xtc  pentapeptide-04-500ns-impl-solv.xtc  pentapeptide-05-500ns-impl-solv.xtc  pentapeptide-06-500ns-impl-solv.xtc  pentapeptide-07-500ns-impl-solv.xtc  pentapeptide-08-500ns-impl-solv.xtc  pentapeptide-09-500ns-impl-solv.xtc  pentapeptide-10-500ns-impl-solv.xtc  pentapeptide-11-500ns-impl-solv.xtc  pentapeptide-12-500ns-impl-solv.xtc  pentapeptide-13-500ns-impl-solv.xtc  pentapeptide-14-500ns-impl-solv.xtc  pentapeptide-15-500ns-impl-solv.xtc  pentapeptide-16-500ns-impl-solv.xtc  pentapeptide-17-500ns-impl-solv.xtc  pentapeptide-18-500ns-impl-solv.xtc  pentapeptide-19-500ns-impl-solv.xtc  pentapeptide-20-500ns-impl-solv.xtc  pentapeptide-21-500ns-impl-solv.xtc  pentapeptide-22-500ns-impl-solv.xtc  pentapeptide-23-500ns-impl-solv.xtc  pentapeptide-24-500ns-impl-solv.xtc
molecularRotationalGrids/: my_constants.py
molecularRotationalGrids/gen_trajectories/: gen_base_gro.py  pseudotrajectory.py  run_GROMACS.py
molecularRotationalGrids/grids/: grid.py  polytopes.py
molecularRotationalGrids/objects_3d/: abstractshape.py  cuboid.py  molecule.py  shape_set.py  sphere.py
molecularRotationalGrids/parsers/: base_gro_parser.py  name_parser.py
molecularRotationalGrids/rotations/: quaternions.py  rotation_2D.py
molgri/: analysis.py  assertions.py  bodies.py  cells.py  constants.py  fullgrid.py  grids.py  io.py  logfiles.py  my_constants.py  naming.py  parsers.py  paths.py  plotting.py  polytopes.py  pts.py  rotations.py  rotobj.py  utils.py  wrappers.py  writers.py
molgri/analysis/: analyse_gromacs_run.py  uniformity_alpha.py  uniformity_measure.py
molgri/examples/: .H2O_H2O_o_ico_500_b_ico_5_t_3830884671.xtc_offsets.npz  CL.gro  Cube3D_1538.npy  Cube3D_386.npy  Cube4D_16448.npy  Cube4D_2080.npy  Cube4D_272.npy  H2O.xyz  H2O_H2O_o_ico_500_b_ico_5_t_3830884671.gro  H2O_H2O_o_ico_500_b_ico_5_t_3830884671.xtc  H2O_H2O_o_ico_500_b_ico_5_t_3830884671.xvg  H2O_NH3_o_cube3D_15_b_ico_10_t_2189828055.gro  Icosahedron_2562.npy  Icosahedron_642.npy  NA.gro  NH3.gro  default_configuration_file.yaml  example_protein.gro  topol_he.top  (+3 more)
notebooks/: cartesian_coord_position_voronoi.ipynb  sqra_reduction.ipynb
pseudotrajectory/: 0000000000.xtc  0000000001.xtc  0000000002.xtc  0000000003.xtc  0000000004.xtc  0000000005.xtc  0000000006.xtc  0000000007.xtc  0000000008.xtc  0000000009.xtc  0000000010.xtc  0000000011.xtc  0000000012.xtc  0000000013.xtc  0000000014.xtc  0000000015.xtc  0000000016.xtc  0000000017.xtc  0000000018.xtc  0000000019.xtc  0000000020.xtc  0000000021.xtc  0000000022.xtc  0000000023.xtc  0000000024.xtc  0000000025.xtc  0000000026.xtc  0000000027.xtc  0000000028.xtc  0000000029.xtc  0000000030.xtc  0000000031.xtc  0000000032.xtc  0000000033.xtc  0000000034.xtc  0000000035.xtc  0000000036.xtc  0000000037.xtc  0000000038.xtc  0000000039.xtc  (+56 more)
scripts/: generate_grid.py  generate_pt.py  set_up_io_directories.py
tests/: example_H2O.gro  example_NA.gro  example_protein.gro  performance.py  test_analysis.py  test_assertions.py  test_bodies.py  test_eigenvector_analysis.py  test_fullgrid.py  test_grids.py  test_helpers.py  test_io.py  test_mazes.py  test_parsers.py  test_plotting.py  test_polytopes.py  test_pt.py  test_rate_merger.py  test_rotations.py  test_rotobj.py  test_scripts.py  test_transitions.py  test_utils.py  test_voronoi.py
workflow/: Snakefile  Snakefile_ar_msm  Snakefile_ar_sqra  Snakefile_grids  Snakefile_methanoid  Snakefile_msm  Snakefile_pyridine  Snakefile_sqra  Snakefile_tests  Snakefile_water_in_ar  Snakefile_water_in_water  all_experiments.csv  all_paper_2024_experiments.csv  default_sqra_gromacs_config.yaml  default_sqra_orca_config.yaml  energy_eval_orca  experiments.csv  experiments_in_ar.csv  experiments_in_water.csv  experiments_pyridine.csv  experiments_to_run.csv  grid_pep.yaml  grid_table.csv  matrix_numerics  molecular_visualizations  pt_pep.yaml  run_grid  run_msm  run_new  run_orca  run_playground  run_records  run_sqra  run_sqra_gromacs  run_sqra_orca  run_system_setup  run_vmd  sample_table.csv  snakemake_utils.py  traj_pep.yaml  (+1 more)
(+91 files in other folders)
