[tool.poetry]
name = "molgri"
version = "1.3.8"
description = "Generate molecular pseudotrajectories based on rotational grids."
authors = ["Hana Zupan <hana.zupan@fu-berlin.de>"]
license = "LICENSE"
readme = "README.md"
#dynamic = ["dependencies"]
keywords = ["pseudotrajectory", "molecular grids", "association", "state space discretisation"]
packages = [
    { include = "molgri/scripts" },
    { include = "molgri/molecules" },
    { include = "molgri/space" },
    { include = "molgri/plotting" },
    { include = "molgri" },
]
repository = "https://github.com/bkellerlab/molecularRotationalGrids"
homepage = "https://www.bcp.fu-berlin.de/en/chemie/chemie/forschung/PhysTheoChem/agkeller/index.html"
documentation = "https://molgri.readthedocs.io/en/main/"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
matplotlib = "^3.9.2"
numpy = ">=1.22.3,<2.0"
plotly = "^5.24.1"
networkx = "^3.4.2"
mdanalysis = "^2.7.0"
scipy = "^1.14.1"
pandas = "^2.2.3"
seaborn = "^0.13.2"
tqdm = "^4.66.5"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"


[tool.poetry.group.notebooks.dependencies]
ipywidgets = "^8.1.5"
ipython = "^8.28.0"
jupyter = "^1.1.1"
nglview = "^3.1.2"


[tool.poetry.group.workflows.dependencies]
snakemake = "^8.24.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
#requires = {file = "requirements.txt"}#["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
molgri-grid = "molgri.scripts.generate_grid:run_generate_grid"
molgri-pt = "molgri.scripts.generate_pt:run_generate_pt"
molgri-io = "molgri.scripts.set_up_io:parse_and_create"

#[tool.setuptools.dynamic]
#dependencies = {file = "requirements.txt"}

[tool.setuptools.package-data]
mypkg = ["molgri/examples/*.gro", "molgri/examples/*.pdb", "molgri/examples/*.xtc", "molgri/examples/*.xvg",
"molgri/examples/*.xyz"]